--- a/src/styles/appointments.module.css
+++ b/src/styles/appointments.module.css
@@ -281,7 +281,12 @@
     border-radius: 10px;
     color: gray;
   }
-  
+  .display_vertical
+  {
+    display: flex;
+    flex-direction: row;
+  }
+
   @media (max-width: 1500px) {
     .responsive_calendar {
       font-size: 8px !important;
