--- a/src/styles/stylescss/Profile.module.css
+++ b/src/styles/stylescss/Profile.module.css
@@ -1,16 +1,18 @@
-.section_content {
-  display: flex;
-  align-items: center;
-  justify-content: left;
+.section_content { 
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    border: 1px solid #ede6e6c7;
+    padding: 0px 0px 20px 20px;
+    border-radius: 9px;
 }
 .img_section {
   border-radius: 50px;
 }
 .heading {
-  width: 222px;
+  width: 239px;
   height: 25px;
-  margin: 0 0 5px;
-  font-family: Poppins;
+  margin: 34px 21px 4px;
   font-size: 18px;
   font-weight: 600;
   font-stretch: normal;
@@ -21,25 +23,21 @@
   color: #4a4a4a !important;
 }
 .details {
-  width: 122px;
-  height: 20px;
-  margin: 5px 100px 0 0;
-  font-family: Poppins;
+  width: 169px; 
+  margin: 5px 100px 8px 20px;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
-  font-style: normal;
-  line-height: 1.29;
+  font-style: normal; 
   letter-spacing: normal;
   text-align: left;
   color: #ccd2d8 !important;
 }
 .redtext {
-  width: 98px;
+  width: 114px;
   height: 17px;
-  margin: 12px 124px 0 0;
-  font-family: Roboto;
-  font-size: 14px;
+  margin: 12px 71px 0 21px;
+   font-size: 14px;
   font-weight: 600;
   font-stretch: normal;
   font-style: normal;
@@ -53,7 +51,6 @@
   color: #db0406;
 }
 .basic_info {
-  font-family: Poppins;
   font-size: 18px;
   font-weight: 600;
   font-stretch: normal;
@@ -71,7 +68,6 @@
 }
 .left_text {
   height: 20px;
-  font-family: Poppins;
   font-size: 14px;
   font-weight: 500;
   font-stretch: normal;
@@ -84,11 +80,11 @@
 .right_text {
   width: 130px;
   height: 20px;
-  font-family: Poppins;
   font-size: 14px;
   font-weight: 600;
   font-stretch: normal;
   font-style: normal;
+  text-align: right;
   line-height: 1.29;
   letter-spacing: normal;
   color: #4a4a4a;
@@ -96,7 +92,6 @@
 
 .right_email {
   height: 20px;
-  font-family: Poppins;
   font-size: 14px;
   font-weight: 600;
   font-stretch: normal;
@@ -110,7 +105,6 @@
 .right_email1 {
   width: 300px;
   height: 20px;
-  font-family: Poppins;
   font-size: 14px;
   font-weight: 600;
   font-stretch: normal;
@@ -128,7 +122,6 @@
 .right_email_icon {
   width: 300px;
   height: 20px;
-  font-family: Poppins;
   font-size: 14px;
   font-weight: 600;
   font-stretch: normal;
@@ -146,7 +139,6 @@
 .badge {
   display: inline-block;
   background-color: #ffffff;
-  font-family: Poppins;
   color: #b1b4b7;
   font-size: 12px;
   font-weight: bold;
@@ -163,7 +155,6 @@
 }
 .emails {
   height: 20px;
-  font-family: Poppins;
   font-size: 14px;
   font-weight: 500;
   font-stretch: normal;
@@ -181,7 +172,6 @@
 .right_email11 {
   width: 300px;
   height: 20px;
-  font-family: Poppins;
   font-size: 14px;
   font-weight: 600;
   font-stretch: normal;
@@ -194,7 +184,6 @@
 .right_email12 {
   width: 300px;
   height: 20px;
-  font-family: Poppins;
   font-size: 14px;
   font-weight: 600;
   font-stretch: normal;
@@ -207,7 +196,6 @@
 .right_email13 {
   width: 300px;
   height: 20px;
-  font-family: Poppins;
   font-size: 14px;
   font-weight: 600;
   font-stretch: normal;
